represent unnamed function boundaries without fabricated identity
Model placement identity with KNOWN, UNNAMED, and ABSENT boundary semantics so unknown metadata cannot prove legality or masquerade as a concrete function identity.

Constraint: reviewed A1b no-doc terminal state must be copied as exact source bytes without documentation additions.
Rejected: fabricated placeholder identity for unnamed functions | unknown metadata cannot prove placement legality.
Confidence: high
Scope-risk: narrow
Directive: preserve the KNOWN/UNNAMED/ABSENT distinction when extending placement identity checks.
Tested: source-object blob equality verified for all five copied files; exact staged file list audited; git diff --cached --check passed.
Not-tested: Maven verification deferred by integration instruction.